@startuml

class UML_editor {
    - menu : MymenuBar 
    - penel : Mypenel
    - toolbar : Mytoolbar
}

class MymenuBar {
    + MymenuBar()

}

class GroupOnclick {
    + GroupOnclick()
}

class UngroupOnclick {
    + UngroupOnclick()
}

class RenameOnclick {
    + RenameOnclick()
}

GroupOnclick --* MymenuBar
UngroupOnclick --* MymenuBar
RenameOnclick --* MymenuBar

class Mytoolbar {
    -tooBtnList : List<ToolButton>

}

class ToolButton {
    -clickedbtn : ToolButton
    # buttonmode : Mymode
    +ToolButton()
    -setClickBtn() : void
    -ToolbtnOnclick() : ActionListener
}

Mytoolbar *-- ToolButton

class Mymode {
    + mousePressed() :void
    + mouseReleased() :void
    + mouseDragged() :void

}

class Selection {
    + Selection()
}
class Createassociation {
    + Createassociation()
}
class Creategeneralization {
    + Creategeneralization()
}
class Createcomposition {
    + Createcomposition()
}
class Createclass {
    + Createclass()
}
class Createusecase {
    + Createusecase()
}

Mymode <|-- Selection
Mymode <|-- Createassociation
Mymode <|-- Creategeneralization
Mymode <|-- Createcomposition
Mymode <|-- Createclass
Mymode <|-- Createusecase

ToolButton --> Mymode

class Myobject {
    - position : int[]
    + paint : void
    + isSelect : boolean
    + name : String
    + inOn() : boolean
    + isInside() : 
    - undergroup : boolean
    - getArea() : Point[]
    + getPort() : Point
    + setPosition() : void
    
}
class group {
    - objlist : List<Myobject>
    - collectObj() : void
}
class BasicObject {
    + BasicObject()
}
class ClassObject {
    + ClassObject()
}
class UsecaseObject {
    + UsecaseObject()
}

class LineObject {
    + LineObject()
}
class AssociationLine {
    + AssociationLine()
}
class CompositionLine {
    + CompositionLine()
}
class GeneralizationLine {
    + GeneralizationLine()
}

class selectArea{
    + selectArea()
}

Myobject <|-- group
Myobject <|-- BasicObject
Myobject <|-- LineObject
Myobject <|-- selectArea


BasicObject <|-- ClassObject
BasicObject <|-- UsecaseObject
LineObject <|-- AssociationLine
LineObject <|-- CompositionLine
LineObject <|-- GeneralizationLine

class Mypenel {
    - myPenel : Mypenel
    - chooseMode : Mymode
    - objList : List<Myobject> 
    - selectArea : Myobject
    + Mypenel()
    + setMode() : void
    + addObject() : void
    + paint() : void
    + rename() : void

}

UML_editor --> MymenuBar
UML_editor --> Mytoolbar
UML_editor --> Mypenel

Mypenel --> Myobject
Mymode --> Myobject



note left of ToolButton::setClickBtn
設定目前選定的模式按鈕
end note

note right of Mypenel::setMode
設定目前選定的模式按鈕
end note
note right of Mypenel::addObject
插入新的物件進列表
end note
note right of Mypenel::paint
繪畫所有列表中的物件
end note
note right of Mypenel::rename
重新命名輸入的物件
end note

note right of group::collectObj
集合並抓取所有選取物件到自己之下
end note


note left of Myobject::inOn
檢查給訂做標是否位於物件之內
end note
note left of Myobject::isInside
檢查給定選取區塊是否框住整個物件
end note
note left of Myobject::getArea
獲取物件範圍
end note
note left of Myobject::getPort
回傳給定方位的Port用於新畫線的連接
end note
note left of Myobject::setPosition
更新位置
end note
note left of Mymode::mousePressed
滑鼠按下時的操作
end note
note left of Mymode::mouseReleased
滑鼠放開時的操作
end note
note left of Mymode::mouseDragged
滑鼠拖曳時的操作
end note

@enduml